--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,20 @@
 name: GraalVM Native Image builds
 on: [push, pull_request]
 jobs:
-  build:
+  assemble:
+    name: something done before the image generation
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.3.1'
+          java-version: '17'
+      - name: Dummy Command
+        run: echo "its $(date)"
+
+  image-generation:
     name: HelloWorld on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
