--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,7 +40,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           native-image-job-reports: 'true'
       - name: Set app version
-        run: echo "APP_VERSION=$(./gradlew -q version)" >> $GITHUB_ENV
+        run: ./gradlew setVersionOnActions
 
       - name: Build and run HelloWorld.java
         run: |
