--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,5 +26,6 @@ jobs:
         run: java -version && uname -mo
         shell: bash
       - name: b
-        run: $GRAALVM_HOME/bin/native-image --version
+#        run: $GRAALVM_HOME/bin/native-image --version
+        run: ls -lha $GRAALVM_HOME/bin/ --version
         shell: bash
