--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,9 @@ jobs:
       - name: a
         run: java -version && uname -mo
         shell: bash
+      - name: aa
+        run: ls -lha $GRAALVM_HOME\bin
       - name: b
 #        run: $GRAALVM_HOME/bin/native-image --version
-        run: ls -lha $GRAALVM_HOME/bin/ --version
+        run: ls -lha $GRAALVM_HOME/bin/
         shell: bash
