--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,7 @@ jobs:
         run: java -version && uname -mo
         shell: bash
       - name: aa
-        run: ls -lha $GRAALVM_HOME\bin
+        run: ls $GRAALVM_HOME\bin
       - name: b
 #        run: $GRAALVM_HOME/bin/native-image --version
         run: ls -lha $GRAALVM_HOME/bin/
