--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           echo 'public class HelloWorld { public static void main(String[] args) { System.out.println("Hello, World!"); } }' > HelloWorld.java
           javac HelloWorld.java
-          native-image HelloWorld ./tmp/helloworld
+          native-image -Djava.home="$env:GRAALVM_HOME" HelloWorld ./tmp/helloworld
           ./helloworld
 
       - name: compress tools
